--- a/client/src/Components/Card/Card.css
+++ b/client/src/Components/Card/Card.css
@@ -131,10 +131,12 @@
     display: flex;
     flex-wrap: no-wrap;
     justify-content: center;
+    margin-left: 20px;
+    margin-bottom: 20px;
   }
   
   .product {
-    width: 250px; /* Esto hará que entren 5 por fila */
+    width: 450px; /* Esto hará que entren 5 por fila */
     margin: 10px;
     padding: 20px;
     border: 1px solid #ccc;
