--- a/client/src/Components/LandingPage/LandingPage.css
+++ b/client/src/Components/LandingPage/LandingPage.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 100vh;
   width: 100%;
-  background-image: url(https://example.com/imagen-de-fondo.jpg); /* Reemplaza con la URL de la imagen de fondo */
+  background-image: url(https://w0.peakpx.com/wallpaper/686/546/HD-wallpaper-earth-world-globe-planet.jpg); 
   background-repeat: no-repeat;
   margin: 0;
   padding: 0;
